refactor(kubernetes): ♻️ 优化Kubernetes停止Pod的处理逻辑
删除不再使用的Collectors.toList()方法，改用toList()简化代码
调整client.pods().delete()为更规范的client.pods().resource(pod).delete()写法